--- a/INTERFACE/static/main.css
+++ b/INTERFACE/static/main.css
@@ -9,15 +9,15 @@ body {
   }
   
   .bg-steel {
-    background-color: #5f788a;
+    background-color: #17a2b8;
   }
   
   .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
+    color: #ffffff;
   }
   
   .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
+    color: #d8d8d8;
   }
   
   .site-header .navbar-nav .nav-link.active {
@@ -77,4 +77,9 @@ body {
   
   .account-heading {
     font-size: 2.5rem;
+  }
+
+  .radio-item label {
+    color: #17a2b8;
+    font-weight: normal;
   }
