--- a/INTERFACE/templates/home.html
+++ b/INTERFACE/templates/home.html
@@ -6,25 +6,28 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Predizione del benessere</legend>
                 <div class="form-group">
-                    {{ form.eta.label(class="form-control-label") }}
-                    {% if form.eta.errors %}
-                        {{ form.eta(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.eta.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.eta(class="form-control form-control-lg") }}
-                    {% endif %}
+                    {{ form.eta2.label }}
+                    {% if form.eta2.errors %}
+                     {% for error in form.eta2.errors %}
+                        <p class="error-message">{{ error }}</p>
+                      {% endfor %}
+                    {%  endif %}
+                    {{ form.eta2(class="form-control form-control-lg") }}
                 </div>
-                <div>
+                <div class="form-group">
+                {{ form.genere.label }}
+                <br>
+                <table>
                 {% for subfield in form.genere %}
                   <tr>
                       <td>{{ subfield }}</td>
                       <td>{{ subfield.label }}</td>
                   </tr>
+                  <tr>
+                      
+                  </tr>
                 {% endfor %}
+                </table>
                 </div>
                 <div class="form-group">
                     {{ form.residenza2.label }}
@@ -34,15 +37,6 @@
                     {% for error in form.residenza2.errors %}
                     <span class="label label-danger">{{ error }}</span>
                     {% endfor %}
-                </div>
-                <div>
-                    {{ form.eta2.label }}
-                    {% if form.eta2.errors %}
-                     {% for error in form.eta2.errors %}
-                        <p class="error-message">{{ error }}</p>
-                      {% endfor %}
-                    {%  endif %}
-                {{ form.eta2 }}
                 </div>
             </fieldset>
             <div class="form-group">
