--- a/INTERFACE/templates/home.html
+++ b/INTERFACE/templates/home.html
@@ -6,13 +6,13 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Predizione del benessere</legend>
                 <div class="form-group">
-                    {{ form.eta2.label }}
-                    {% if form.eta2.errors %}
-                     {% for error in form.eta2.errors %}
-                        <p class="error-message">{{ error }}</p>
-                      {% endfor %}
-                    {%  endif %}
-                    {{ form.eta2(class="form-control form-control-lg") }}
+                    {{ form.eta.label }}
+                    <small class="text-muted">{{ form.eta.description }}</small>
+                    {{ form.eta(class_="form-control") }}
+
+                    {% for error in form.eta.errors %}
+                    <span class="label label-danger">{{ error }}</span>
+                    {% endfor %}
                 </div>
                 <div class="form-group">
                 {{ form.genere.label }}
@@ -21,6 +21,8 @@
                 {% for subfield in form.genere %}
                   <tr>
                       <td>{{ subfield }}</td>
+                      <td></td>
+                      <td></td>
                       <td></td>
                       <td>{{ subfield.label }}</td>
                   </tr>
