--- a/INTERFACE/templates/home.html
+++ b/INTERFACE/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-        <form method="POST" action="">
+        <form method="GET" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Predizione del benessere</legend>
@@ -46,5 +46,26 @@
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
+    </div>
+    <div>
+        <table class="table table-bordered">
+        <thead>
+        <tr class="table-active">
+            <th scope="col">Anno di nascita</th>
+            <th scope="col">Genere</th>
+            <th scope="col">Residenza</th>
+            <th scope="col">Predizione</th>
+            
+        </tr>
+        </thead>
+        <tbody>
+            <tr>
+            <td>{{ age }}</td>
+            <td>{{ gender }}</td>
+            <td>{{ place }}</td>
+            <td><b>prob<b></td>
+            </tr>
+        </tbody>
+        </table>
     </div>
 {% endblock content %}
