--- a/INTERFACE/static/main.css
+++ b/INTERFACE/static/main.css
@@ -82,4 +82,12 @@ body {
   .form-check-input {
     color: #17a2b8;
   }
+
+  a {
+    color: #17a2b8;
+  }
+
+  a:hover {
+    color: #d8d8d8;
+  }
  
