--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,33 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
-    <h4>Source code <a href="https://github.com/elypaolazz/BDT-Project">repository</a> </h4>
+    <h1 style="color:#17a2b8;"><b>C.E.N.S.U.S<b/></h1>
+    <h3 style="color:#17a2b8;"><i>Calculator of Earnings Nationally Scored via User Specifics</i></h3>
+        <h5>CENSUS is a web app made with Flask that aims at informing the user about his/her income bracket, predicted
+        on the basis of some of his/her census data.<br>
+        We are Lucia and Elisa, two Data Science students at <i>University of Trento</i>. This project has been developed
+        during Big Data Technologies course and the aim is to build Big Data System able to predict the <a href="https://www.informazionefiscale.it/Irpef-2021-aliquote-scaglioni-calcolo-novita">IRPEF</a>
+        income groups based on some census data:
+
+        <br>
+        <ul style="color:#787878;line-height:160%;">
+            <li>age (more precisely year of birth)</li>
+            <li>gender (otional, the user can not specify it)</li>
+            <li>province of residence</li>
+            <li>number of family component</li>
+            <li>marital status</li>
+        </ul>
+        </h5>
+    <div class="content-section">
+        <h5>The prediction is made possible by a Random Forest algorithm feed by the data entered by users. Such algorithm has been trained
+        on some big dataset from <i>Banca d'Italia</i> and <i>Sole 24 Ore</i>:
+
+        <br>
+        <ul style="color:#787878;line-height:160%;">
+            <li><a href="https://www.bancaditalia.it/statistiche/tematiche/indagini-famiglie-imprese/bilanci-famiglie/distribuzione-microdati/ricerca/ricerca.html?min_anno_pubblicazione=2018&max_anno_pubblicazione=2018">Indagine sul 2018</a></li>
+            <li><a href="https://www.bancaditalia.it/statistiche/tematiche/indagini-famiglie-imprese/bilanci-famiglie/distribuzione-microdati/ricerca/ricerca.html?min_anno_pubblicazione=2018&max_anno_pubblicazione=2018">Indagine sul 2016</a></li>
+            <li><a href="https://github.com/IlSole24ORE/QDV">Qualità della vita</a></li>
+        </ul>
+        </h5>
+        <h4>Source code of the project is available on <a href="https://github.com/elypaolazz/BDT-Project">GitHub</a> </h4>
+    </div>
 {% endblock content %}
