Airflow API implemented

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h1 style="color:#17a2b8;"><b>C.E.N.S.U.S<b/></h1>
     <h3 style="color:#17a2b8;"><i>Calculator of Earnings Nationally Scored via User Specifics</i></h3>
-        <h5>CENSUS is a web app made with Flask that aims at informing the user about his/her income bracket, predicted
+        <h5>CENSUS is a web application, developed using Flask framework, that aims at informing the user about his/her income bracket, predicted
         on the basis of some of his/her census data.<br>
         We are Lucia and Elisa, two Data Science students at <i>University of Trento</i>. This project has been developed
         during Big Data Technologies course and the aim is to build Big Data System able to predict the <a href="https://www.informazionefiscale.it/Irpef-2021-aliquote-scaglioni-calcolo-novita">IRPEF</a>
@@ -11,7 +11,7 @@
         <br>
         <ul style="color:#787878;line-height:160%;">
             <li>age (more precisely year of birth)</li>
-            <li>gender (otional, the user can not specify it)</li>
+            <li>gender (optional, the user can not specify it)</li>
             <li>province of residence</li>
             <li>number of family component</li>
             <li>marital status</li>
