--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,7 @@
         We are Lucia and Elisa, two Data Science students at <i>University of Trento</i>. This project has been developed
         during Big Data Technologies course and the aim is to build Big Data System able to predict the <a href="https://www.informazionefiscale.it/Irpef-2021-aliquote-scaglioni-calcolo-novita">IRPEF</a>
         income groups based on some census data:
-
+        <br>
         <br>
         <ul style="color:#787878;line-height:160%;">
             <li>age (more precisely year of birth)</li>
@@ -22,15 +22,14 @@
     <div class="content-section">
         <h5>The prediction is made possible by a Random Forest algorithm fed with the entered data. Such algorithm has been trained
         on some big <i>Banca d'Italia</i> and <i>Sole 24 Ore</i> datasets:
-
+        <br>
         <br>
         <ul style="color:#787878;line-height:160%;">
             <li>Banca d'Italia, Indagine sui bilanci delle famiglie italiane, <a href="https://www.bancaditalia.it/statistiche/tematiche/indagini-famiglie-imprese/bilanci-famiglie/distribuzione-microdati/ricerca/ricerca.html?min_anno_pubblicazione=2018&max_anno_pubblicazione=2018">Indagine sul 2018</a></li>
-            <li>Banca d'Italia, Indagine sui bilanci delle famiglie italiane, <a href="https://www.bancaditalia.it/statistiche/tematiche/indagini-famiglie-imprese/bilanci-famiglie/distribuzione-microdati/ricerca/ricerca.html?min_anno_pubblicazione=2018&max_anno_pubblicazione=2018">Indagine sul 2016</a></li>
-            <li><a href="https://lab24.ilsole24ore.com/qualita-della-vita/">Qualità della vita</a> (The <a href="https://github.com/IlSole24ORE/QDV">dataset</a> is protected by Creative Commons Licence CC-BY-NC-4.0.)</li>
+            <li>Banca d'Italia, Indagine sui bilanci delle famiglie italiane, <a href="https://www.bancaditalia.it/statistiche/tematiche/indagini-famiglie-imprese/bilanci-famiglie/distribuzione-microdati/ricerca/ricerca.html?min_anno_pubblicazione=2015&max_anno_pubblicazione=2015">Indagine sul 2016</a></li>
+            <li><a href="https://lab24.ilsole24ore.com/qualita-della-vita/">Qualità della vita</a> (the <a href="https://github.com/IlSole24ORE/QDV">dataset</a> is protected by Creative Commons Licence CC-BY-NC-4.0.)</li>
         </ul>
         </h5>
         <h4>Source code of the project is available on <a href="https://github.com/elypaolazz/BDT-Project">GitHub</a> </h4>
-        <legen>Licences  </legend>
     </div>
 {% endblock content %}
