--- a/templates/layout.html
+++ b/templates/layout.html
@@ -51,6 +51,7 @@
           {% block content %}{% endblock %}
         </div>
       </div>
+      <legend style="color:#787878; font-family:'Courier New'; font-size: 17px;">This application does not collect and save your data</legend>
     </main>
 
 
