--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,14 +20,14 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/"><b>CENSUS</b></a>
+          <a class="navbar-brand mr-4" href="/"><b style="font-size: 28px;">CENSUS</b></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
-              <a class="nav-item nav-link" href="{{ url_for('line') }}">Graphs</a>
+              <a class="nav-item nav-link" href="{{ url_for('about') }}" style="font-size: 18px;">About</a>
+              <a class="nav-item nav-link" href="{{ url_for('line') }}" style="font-size: 18px;">Graphs</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
