Modified templates, added new graph in R_graph_scripts

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,14 +6,14 @@
         <h5>CENSUS is a web application, developed using Flask framework, that aims at informing the user about his/her income bracket, predicted
         on the basis of some of his/her census data.<br>
         We are Lucia and Elisa, two Data Science students at <i>University of Trento</i>. This project has been developed
-        during Big Data Technologies course and the aim is to build Big Data System able to predict the <a href="https://www.informazionefiscale.it/Irpef-2021-aliquote-scaglioni-calcolo-novita">IRPEF</a>
+        during Big Data Technologies course and the aim is to build a Big Data System able to predict the <a href="https://www.informazionefiscale.it/Irpef-2021-aliquote-scaglioni-calcolo-novita">IRPEF</a>
         income groups based on some census data:
         <br>
         <br>
         <ul style="color:#787878;line-height:160%;">
             <li>age (more precisely year of birth)</li>
             <li>gender (optional, the user can not specify it)</li>
-            <li>province of residence (<a href= "https://www.istat.it/it/archivio/6789">ISTAT code </a>)</li>
+            <li>province of residence (<a href= "https://www.istat.it/it/archivio/6789">ISTAT code</a>)</li>
             <li>number of family component</li>
             <li>marital status (single, cohabitee, married, widow, separated, divorced)</li>
         </ul>
@@ -30,6 +30,6 @@
             <li><a href="https://lab24.ilsole24ore.com/qualita-della-vita/">Qualità della vita</a> (the <a href="https://github.com/IlSole24ORE/QDV">dataset</a> is protected by Creative Commons Licence CC-BY-NC-4.0.)</li>
         </ul>
         </h5>
-        <h4>Source code of the project is available on <a href="https://github.com/elypaolazz/BDT-Project">GitHub</a> </h4>
+        <h4>Source code of the project is available on <a href="https://github.com/elypaolazz/BDT-Project">GitHub</a></h4>
     </div>
 {% endblock content %}
