Modified main.py, collcetor.py and provice_ita.json

--- a/templates/home.html
+++ b/templates/home.html
@@ -121,7 +121,7 @@
     <table class="table table-bordered">
         <thead>
         <tr class="table-active">
-            <th scope="col">Fascia di reddito di riferimento</th>
+            <th scope="col">Fascia di reddito di riferimento (Irpef)</th>
             <th scope="col" style="width: 65%;">Predizione</th>
 
         </tr>
@@ -157,8 +157,8 @@
         <center>
             <h4>Spesa delle famiglie</h4>
             <h6 style="color:#787878;">Per il consumo di beni durevoli - In euro all'anno</h6>
-            <br>
-        <img src="{{ url_for('static', filename='spese_fam.png') }}" alt="Spese famiglie italiane" width="652" height="586">
+        <img src="{{ url_for('static', filename='spese_fam.png') }}" alt="Spese famiglie italiane" width="552" height="486">
+        <figcaption style="color:#787878; font-size: 18px;">I dati si riferiscono all'indagine <a href="https://github.com/IlSole24ORE/QDV"><i>Qualità della vita 2020</i></a> per l'anno 2019 e 2020</figcaption>
         </center>
     </div>
 {% endblock content %}
