Final templates commit

--- a/templates/home.html
+++ b/templates/home.html
@@ -155,6 +155,7 @@
         </table>
         <br>
         <center>
+            <img src="{{ url_for('static', filename='consumi.svg') }}" width="70" height="70">
             <h4>Spesa delle famiglie</h4>
             <h6 style="color:#787878;">Per il consumo di beni durevoli - In euro all'anno</h6>
         <img src="{{ url_for('static', filename='spese_fam.png') }}" alt="Spese famiglie italiane" width="552" height="486">
