--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('about') }}" style="font-size: 18px;">About</a>
-              <a class="nav-item nav-link" href="{{ url_for('line') }}" style="font-size: 18px;">Graphs</a>
+              <a class="nav-item nav-link" href="{{ url_for('line') }}" style="font-size: 18px;">Grafici</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
